# email-dump

./: .gitignore  .pre-commit-config.yaml  README.md  email_dump.py  setup.cfg
